monticore-generator/src/test/resources/cocos/invalid/A4013/A4013.mc4
package cocos.invalid.A4013;

grammar A4013 {
  A extends B;

  ast A astextends C;

  B;

  C;

}